LiveChat now fades and deletes extra messages. Fixes #15 Livechat doesn't ever cut off

--- a/src/main/webapp/resources/css/jabber-analytics.css
+++ b/src/main/webapp/resources/css/jabber-analytics.css
@@ -11,7 +11,6 @@ span#url { display: block; margin-bottom: -8px; }
 #latestmessages, #popularlinks, #mostactive {
 	overflow: auto;
 	width: 100%;
-	height: 70%;
 	padding: 5px;
 	font-size: 12px;
 } 
